# titanic

./: .gitignore  pyproject.toml
.github/workflows/: checks.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
environment/: kaggle_environment_v0.yml  local_environment_v0.yml
tests/: test_load_prep.py
titanic/: __init__.py  catboost_tune.py  ensemble.py  lightgbm_tune.py  load_prep.py  model.py  other_tune.py  randomforest_tune.py  utils.py  xgb_tune.py
