[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "titanic"
authors = [{name = "HG"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
version = "0.0.1"
dynamic = ["description"]

[project.optional-dependencies]
checks = [
    "black",
    "ruff"
]

[tool.black]
line-length = 88
target-version = ['py310']